# train_CheckersGPT

./: main.py  pyproject.toml  slurm-58311806.out  submit_test.slurm  test_chess.sh
